--- a/package.json
+++ b/package.json
@@ -10,12 +10,15 @@
     "grommet": "^2.11.3",
     "grommet-icons": "^4.4.0",
     "leaflet": "^1.6.0",
+    "leaflet-draw": "^1.0.4",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-google-maps": "^9.4.5",
     "react-leaflet": "^2.6.3",
+    "react-leaflet-draw": "^0.19.0",
     "react-scripts": "3.4.1",
-    "styled-components": "^5.0.1"
+    "styled-components": "^5.0.1",
+    "uuid": "^7.0.3"
   },
   "scripts": {
     "start": "react-scripts start",
